# placecard-app

./: .gitignore  DEPLOYMENT.md  LAUNCH-CHECKLIST.md  SOP-DEPLOYMENT-SECURITY.md  SOP-SECURITY-RUNBOOK.md
backend/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_11_0900-27bdb0d866dd_baseline_schema.py  2026_05_15_1200-a4f3e9c1b720_add_email_subscribers_and_unsubscribed.py  2026_05_15_1530-c1e8a7d2f5b9_add_user_id_to_events.py  2026_05_16_0900-d4e8b1f5a3c2_events_user_id_not_null.py  2026_05_16_0915-e9f2a4d8c6b7_notification_settings_user_id.py  2026_05_16_1000-f1a3b5d7c9e2_create_designs_table.py  2026_05_16_1100-a5e9b3d8c7f4_create_print_orders_table.py  2026_05_16_1300-c7e9b1d3f5a8_add_tracking_to_print_orders.py  2026_05_17_0900-b2c5d7e9f3a1_create_workspaces_and_profiles.py  2026_05_17_1000-d3e8f6a9c2b4_create_salons_and_link_to_events.py  2026_05_18_1000-e5a8c4f7b9d2_workspace_members_and_event_workspace.py  2026_05_18_1200-f4b8d2e6a9c3_rename_personal_workspaces_to_display_name.py
backend/app/: auth.py  config.py  database.py  main.py  pricing.py
backend/app/data/: reserved_handles.json
backend/app/models/: attendee.py  custom_form.py  design.py  email_subscriber.py  event.py  google_form.py  notification.py  print_order.py  profile.py  salon.py  schedule.py  seating.py  table.py  workspace.py  workspace_member.py
backend/app/routers/: attendees.py  brand_colors.py  custom_forms.py  designs.py  document_import.py  events.py  fourover.py  name_cards.py  places.py  printing.py  users.py  (+10 more)
(+74 files in other folders)
